--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ PORT=8080
 DATABASE_UR=jdbc:postgresql://localhost:5432/database
 DATABASE_USER=
 DATABASE_PASSWORD=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_SECRET=
