chore: add `OAUTH_REDIRECT_URL` env

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,7 @@ DATABASE_UR=jdbc:postgresql://localhost:5432/database
 DATABASE_USER=
 DATABASE_PASSWORD=
 
+OAUTH_REDIRECT_URL=http://frontend.com/register
+
 GOOGLE_CLIENT_ID=
 GOOGLE_SECRET=
