chore: add env about jwt config

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,10 @@ DATABASE_PASSWORD=
 
 OAUTH_REDIRECT_URL=http://frontend.com/register
 
+ACCESS_TOKEN_SECRET=
+ACCESS_TOKEN_EXPIRATION=
+REGISTER_TOKEN_SECRET=
+REGISTER_TOKEN_EXPIRATION=
+
 GOOGLE_CLIENT_ID=
 GOOGLE_SECRET=
