chore: fix typo

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 PORT=8080
 
-DATABASE_UR=jdbc:postgresql://localhost:5432/database
-DATABASE_USER=
+DATABASE_URL=jdbc:postgresql://localhost:5432/database
+DATABASE_USERNAME=
 DATABASE_PASSWORD=
 
 OAUTH_REDIRECT_URL=http://frontend.com/register
