feat: add `successUrl` env

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ DATABASE_USERNAME=
 DATABASE_PASSWORD=
 
 OAUTH_REDIRECT_URL=http://frontend.com/register
+OAUTH_SUCCESS_URL=http://localhost
 
 ACCESS_TOKEN_SECRET=
 ACCESS_TOKEN_EXPIRATION=
