--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,6 +25,20 @@ spring:
                         scope:
                             - profile
                             - email
+                    naver:
+                        client-id: ${NAVER_CLIENT_ID}
+                        client-secret: ${NAVER_SECRET}
+                        scope:
+                            - email
+                        client-name: Naver
+                        authorization-grant-type: authorization_code
+                        redirect-uri: http://localhost:8080/login/oauth2/code/naver
+                provider:
+                    naver:
+                        authorization-uri: https://nid.naver.com/oauth2.0/authorize
+                        token-uri: https://nid.naver.com/oauth2.0/token
+                        user-info-uri: https://openapi.naver.com/v1/nid/me
+                        user-name-attribute: response
 oauth:
     redirect-url: ${OAUTH_REDIRECT_URL}
     success-url: ${OAUTH_SUCCESS_URL}
