--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
             - name: Run ktlint
               uses: ScaCap/action-ktlint@master
               with:
-                github_token: ${{ secrets.github_token }}
+                github_token: ${{ secrets.token }}
                 reporter: github-pr-review
                 fail_on_error: true
 
