--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
             - name: Grant execute permission
               run: chmod +x gradlew
 
-            - name: Run tests
+            - name: Run ktlint
               run: ./gradlew ktlintCheck
 
     unit-test:
