--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,9 @@ NAVER_SECRET=
 DIARY_SECRET=
 
 CORS_ORIGINS=http://localhost:3000,http://frontend
+
+MINIO_ENDPOINT=
+MINIO_ACCESS_KEY=
+MINIO_SECRET_KEY=
+MINIO_BUCKET_NAME=
+MINIO_PRESIGNED_URL_EXPIRATION=
