--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -53,3 +53,9 @@ diary:
     secret: ${DIARY_SECRET}
 cors:
     origins: ${CORS_ORIGINS}
+minio:
+    endpoint: ${MINIO_ENDPOINT}
+    access-key: ${MINIO_ACCESS_KEY}
+    secret-key: ${MINIO_SECRET_KEY}
+    bucket-name: ${MINIO_BUCKET_NAME}
+    presigned-url-expiration: ${MINIO_PRESIGNED_URL_EXPIRATION}
