--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -39,6 +39,9 @@ spring:
                         token-uri: https://nid.naver.com/oauth2.0/token
                         user-info-uri: https://openapi.naver.com/v1/nid/me
                         user-name-attribute: response
+    batch:
+        jdbc:
+            initialize-schema: always
 oauth:
     redirect-url: ${OAUTH_REDIRECT_URL}
     success-url: ${OAUTH_SUCCESS_URL}
