feat: add `DOMAIN` env to use in token cookie

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -65,3 +65,4 @@ minio:
     secret-key: ${MINIO_SECRET_KEY}
     bucket-name: ${MINIO_BUCKET_NAME}
     presigned-url-expiration: ${MINIO_PRESIGNED_URL_EXPIRATION}
+domain: ${DOMAIN}
