--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -14,3 +14,11 @@ spring:
                 dialect: org.hibernate.dialect.PostgreSQLDialect
                 highlight_sql: true
                 use_sql_comments: true
+    security:
+        oauth2:
+            client:
+                registration:
+                    google:
+                        redirect-uri: http://localhost:8080/login/oauth2/code/google
+                    naver:
+                        redirect-uri: http://localhost:8080/login/oauth2/code/naver
