chore: add `API_DOMAIN` env

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -28,7 +28,7 @@ spring:
                         scope:
                             - profile
                             - email
-                        redirect-uri: https://${DOMAIN}/login/oauth2/code/google
+                        redirect-uri: https://${API_DOMAIN}/login/oauth2/code/google
                     naver:
                         client-id: ${NAVER_CLIENT_ID}
                         client-secret: ${NAVER_SECRET}
@@ -36,7 +36,7 @@ spring:
                             - email
                         client-name: Naver
                         authorization-grant-type: authorization_code
-                        redirect-uri: https://${DOMAIN}/login/oauth2/code/naver
+                        redirect-uri: https://${API_DOMAIN}/login/oauth2/code/naver
                 provider:
                     naver:
                         authorization-uri: https://nid.naver.com/oauth2.0/authorize
