--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,10 @@
 server:
     port: ${PORT:8080}
+    forward-headers-strategy: NATIVE
+    tomcat:
+        remoteip:
+            protocol-header: X-Forwarded-Proto
+            remote-ip-header: X-Forwarded-For
 spring:
     profiles:
         default: prod
