chore: update application.yaml

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 server:
     port: ${PORT:8080}
-    forward-headers-strategy: NATIVE
+    forward-headers-strategy: FRAMEWORK
     tomcat:
         remoteip:
             protocol-header: X-Forwarded-Proto
