--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -68,3 +68,6 @@ minio:
     bucket-name: ${MINIO_BUCKET_NAME}
     presigned-url-expiration: ${MINIO_PRESIGNED_URL_EXPIRATION}
 domain: ${DOMAIN}
+sentry:
+    dsn: ${SENTRY_DSN}
+    send-default-pii: true
