chore: change `forward-headers-strategy` option to `none`

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 server:
     port: ${PORT:8080}
-    forward-headers-strategy: framework
+    forward-headers-strategy: none
 spring:
     profiles:
         default: prod
