--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,3 +12,15 @@ services:
         volumes:
             - ./minio/data:/data
         shm_size: 1G
+    maru-dev:
+        container_name: maru-dev
+        build:
+            context: .
+            dockerfile: Dockerfile
+        restart: unless-stopped
+        ports:
+            - "8080:8080"
+        env_file:
+            - .env
+        depends_on:
+            - minio-dev
