--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,7 +20,7 @@ spring:
             hibernate:
                 dialect: org.hibernate.dialect.PostgreSQLDialect
             jdbc:
-                time_zone: Asia/Seoul
+                time_zone: UTC
     security:
         oauth2:
             client:
