docs: update README.md and add comments in .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,21 @@
+TZ=Asia/Seoul
+
 PORT=8080
+# Frontend domain (without schema, trailing slash)
 DOMAIN=localhost
+# Backend domain
 API_DOMAIN=localhost
 
 DATABASE_URL=jdbc:postgresql://localhost:5432/database
 DATABASE_USERNAME=
 DATABASE_PASSWORD=
 
+# Redirect URL after initial social login
 OAUTH_REDIRECT_URL=http://frontend.com/register
+# Redirect URL after successful social login
 OAUTH_SUCCESS_URL=http://localhost
 
+# Secret to sign access token and register token
 ACCESS_TOKEN_SECRET=
 ACCESS_TOKEN_EXPIRATION=
 REGISTER_TOKEN_SECRET=
@@ -20,8 +27,10 @@ GOOGLE_SECRET=
 NAVER_CLIENT_ID=
 NAVER_SECRET=
 
+# Secret to encrypt user's diary
 DIARY_SECRET=
 
+# Separate by comma
 CORS_ORIGINS=http://localhost:3000,http://frontend
 
 MINIO_ENDPOINT=
